Updates text to describe current Zbay functionality

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <html data-wf-page="5eda64bd77a8dcf0f8ed8a11" data-wf-site="5eda64bd77a8dc6e05ed8a12">
 <head>
   <meta charset="utf-8">
-  <title>Zbay - Peer-to-peer, encrypted messaging & e-commerce over Zcash</title>
-  <meta name="title" content="Zbay - Peer-to-peer, encrypted messaging & e-commerce over Zcash">
-  <meta name="description" content="Zbay lets you send messages, build online communities and marketplaces, and buy & sell products privately using Zcash.">
+  <title>Zbay - A free, open source, peer-to-peer space for communities. No server required.</title>
+  <meta name="title" content="A free, open source, peer-to-peer space for communities. No server required.">
+  <meta name="description" content="Zbay lets you send messages, build online communities, and send money privately using Zcash.">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
@@ -100,7 +100,7 @@ input[type=text] {
   <div class="zb-hero-section">
     <div class="zb-hero">
       <div class="zb-hero__desc-cont">
-        <h1 class="zb-hero-heading">Your private inbox on the better Internet, for messages, money, and buying things.</h1>
+        <h1 class="zb-hero-heading">A free, open source, peer-to-peer space for communities. No server required.</h1>
         <div class="zb-form-block-cta w-form">
           <form id="email-form" name="email-form" data-name="Email Form" class="zb-cta-form"><input type="text" class="zb-enter-your-email w-input" maxlength="256" name="name" data-name="Name" placeholder="Enter your email" id="name"><input type="submit" value="Join the beta" data-wait="Please wait..." class="submit-button w-button"></form>
           <div class="success-message w-form-done">
@@ -115,7 +115,7 @@ input[type=text] {
           <div class="zb-links-row"><a id="zb-first-other-target-link" href="#"></a> | <a id="zb-second-other-target-link" href="#"></a></div>
         </div>
         <div class="zb-warning"><img src="images/warning.svg" width="48" height="48" alt="" class="zb-warning-image">
-          <div class="zb-warning-text">⚠️ Zbay is in beta. Don't use it for storing funds or when security is critical.</div>
+          <div class="zb-warning-text">⚠️ Zbay is in alpha. Don't use it for storing funds or when security is critical.</div>
         </div>
       </div>
       <div data-w-id="026f2572-7222-947b-ef55-337847e2fc0d" style="-webkit-transform:translate3d(0, 309PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(52DEG) skew(0, 0);-moz-transform:translate3d(0, 309PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(52DEG) skew(0, 0);-ms-transform:translate3d(0, 309PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(52DEG) skew(0, 0);transform:translate3d(0, 309PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(52DEG) skew(0, 0);opacity:0" class="zb-hero__image-container"><img src="images/macbook-with-screen.png" srcset="images/macbook-with-screen-p-500.png 500w, images/macbook-with-screen-p-1600.png 1600w, images/macbook-with-screen-p-2000.png 2000w, images/macbook-with-screen.png 2344w" sizes="(max-width: 479px) 90vw, (max-width: 767px) 84vw, (max-width: 991px) 76vw, 80vw" alt="" class="zbay-app-mockup"></div>
@@ -126,9 +126,9 @@ input[type=text] {
       <div class="zb-2-column-r-image w-row">
         <div class="zb-l-column w-col w-col-4"><img src="images/messages.svg" alt="" class="column-image"></div>
         <div class="zb-r-column w-col w-col-8">
-          <h1 class="zb-section-heading">Message privately, on-chain</h1>
-          <p class="zb-p">On Zbay, every direct message you send is end-to-end encrypted so that only the recipient can read it.<br></p>
-          <p class="zb-p">Unlike Signal &amp; WhatsApp, Zbay does not use phone numbers or “trust on first use,” so it’s more resistant to man-in-the-middle attacks.<br></p>
+          <h1 class="zb-section-heading">Group chat, over Tor</h1>
+          <p class="zb-p">Zbay sends messages over a peer-to-peer network, using the privacy-preserving, censorship-circumvention tool <a href="https://www.torproject.org/">Tor</a> to connect to other peers.<br></p>
+          <p class="zb-p">Where apps like Slack, Discord, Signal and Element rely on central servers, Zbay syncs messages directly from other community members.<br></p>
         </div>
       </div>
     </div>
@@ -138,10 +138,9 @@ input[type=text] {
       <div class="zb-2-column-l-image w-row">
         <div class="zb-l-column w-col w-col-4"><img src="images/buying.svg" alt="" class="column-image"></div>
         <div class="zb-r-column w-col w-col-8">
-          <h1 class="zb-section-heading">Buy &amp; sell</h1>
+          <h1 class="zb-section-heading">Buy, sell, send money</h1>
           <p class="zb-p">You can buy and sell things on Zbay, privately, with <a href="https://z.cash">Zcash</a>.<br></p>
-          <p class="zb-p">Zbay lets you send a seller your order information (quantity, size, etc.) and your shipping address (if necessary) with funds in an encrypted message.<br></p>
-          <p class="zb-p">With Bitcoin, third parties can see who paid who, but Zcash makes this much more difficult, if not impossible, protecting your privacy. Someday Zbay will have escrow payments with dispute resolution and seller ratings. Right now, channel owners can use moderation to keep out scam sellers.<br></p>
+          <p class="zb-p">With most cryptocurrencies, such as Bitcoin, third parties can see who paid who. But Zcash makes this much more difficult, if not impossible, protecting your privacy. Zbay has a Zcash wallet built in, and you can send Zcash to any Zbay user.<br></p>
         </div>
       </div>
     </div>
@@ -149,37 +148,22 @@ input[type=text] {
   <div id="faq" class="zb-section">
     <div class="zb-container">
       <div class="zb-2-column-r-image w-row">
-        <div class="zb-l-column w-col w-col-4"><img src="images/group-chat.svg" alt="" class="column-image"></div>
-        <div class="zb-r-column w-col w-col-8">
-          <h1 class="zb-section-heading">Build safe communities, earn money</h1>
-          <p class="zb-p">Zbay has “channels”, group chats that can be either private or public.<br></p>
-          <p class="zb-p">Messages to a channel are encrypted, but everyone who gets the key to the channel can see them.<br></p>
-          <p class="zb-p">Public channels have owners who can moderate messages, keep their community safe from spam & abuse, set prices for advertising, and earn money if their channel thrives.<br></p>
-        </div>
-      </div>
-    </div>
-  </div>  
-  <div id="faq" class="zb-section">
-    <div class="zb-container">
-      <div class="zb-2-column-l-image w-row">
         <div class="zb-l-column w-col w-col-4"><img src="images/hello.svg" alt="" class="column-image"></div>
         <div class="zb-r-column w-col w-col-8">
           <h1 class="zb-section-heading">Be yourself, make your own rules</h1>
-          <p class="zb-p">Zbay doesn't rely on central servers, and anyone can register a username or channel. (Soon, you’ll be able to register as many usernames as you want!)<br></p>
-          <p class="zb-p">Usernames and channels get engraved in the Zcash blockchain, with your cryptographic key.<br></p>
-          <p class="zb-p">This means Zbay does not control who has a Zbay account, or what you do with your account. If Zbay was ever forced to censor users, any developer could fork Zbay and remove the censorship.<br></p>
+          <p class="zb-p">In Zbay, not even usernames and user accounts rely on our servers. The makers of Zbay do not control who has a Zbay account, or what you do with your account.<br></p>
+          <p class="zb-p">Even if Zbay was ever forced to censor users, any developer could fork Zbay (that is, modify it and offer a competing version) to remove the censorship.<br></p>
         </div>
       </div>
     </div>
   </div>
   <div id="faq" class="zb-section">
     <div class="zb-container">
-      <div class="zb-2-column-r-image w-row">
+      <div class="zb-2-column-l-image w-row">
         <div class="zb-l-column w-col w-col-4"><img src="images/open-source.svg" alt="" class="column-image"></div>
         <div class="zb-r-column w-col w-col-8">
           <h1 data-w-id="57a5976b-66ed-76da-385d-08b82ab3d7e9" class="zb-section-heading">Don't take our word for it</h1>
           <p class="zb-p">Zbay is free and open source software, so independent researchers will be able to verify that Zbay does what it claims.<br></p>
-          <p class="zb-p">Only you control the cryptographic keys to read your private messages.<br></p>
           <p class="zb-p">If Zbay changes in an annoying or unethical way, any developer in the world can change Zbay’s code and publish a better version—and you could easily move your username, data, and messages to that new version.<br></p>
         </div>
       </div>
@@ -187,27 +171,12 @@ input[type=text] {
   </div>
   <div id="faq" class="zb-section">
     <div class="zb-container">
-      <div class="zb-2-column-l-image w-row">
+      <div class="zb-2-column-r-image w-row">
         <div class="zb-l-column w-col w-col-4"><img src="images/giants.svg" alt="" class="column-image"></div>
         <div class="zb-r-column w-col w-col-8">
-          <h1 class="zb-section-heading">Powered by Zcash</h1>
-          <p class="zb-p">Zbay stands on the shoulders of giants. Instead of central servers it uses Zcash, a privacy-focused cryptocurrency with a world class team of experts in cryptography and privacy protection.<br></p>
-          <p class="zb-p">In turn, Zcash is based on Bitcoin, the oldest and most valuable cryptocurrency.<br></p>
-          <p class="zb-p">Zcash is a well-funded open source project, stewarded by both a for-profit company and a non-profit foundation committed to making it as secure, scalable, and private as possible.<br></p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div id="faq" class="zb-section">
-    <div class="zb-container">
-      <div class="zb-2-column-r-image w-row">
-        <div class="zb-l-column w-col w-col-4"><img src="images/money-bag.svg" alt="" class="column-image"></div>
-        <div class="zb-r-column w-col w-col-8">
-          <h1 class="zb-section-heading">With money built-in, you're in control</h1>
-          <p class="zb-p">Zbay uses the Zcash cryptocurrency to do everything.<br></p>
-          <p class="zb-p">Reading messages is free, but sending a message costs about 1/50th of a cent. This simple mechanism helps sustain the network without relying on, say, a giant corporation monetizing your data someday.<br></p>
-          <p class="zb-p">For now, every Zbay user gets ~100+ messages to start with, for free! We’re also working on making it extremely easy to buy Zcash, and to make all messages free in cases where they don't burden the network, for example when the recipient is online. <em>Ultimately, we hope to prove it's possible to build usable online spaces that don't compromise on privacy, freedom, or control. This is just a start, and we invite you to try it.</em><br></p>
+          <h1 class="zb-section-heading">Built to give others control</h1>
+          <p class="zb-p">Rather than building our own peer-to-peer network from scratch, we use established technologies like <a href="https://www.torproject.org/">Tor</a>, <a href="https://libp2p.io/">libp2p</a>, and <a href="https://z.cash/">Zcash</a>, since these tools are improving constantly, independent of our team.<br></p>
+          <p class="zb-p">We use familiar, cross-platform technologies like Node, Electron, and React, so that Zbay will be as easy as possible for any developers who disagree with our approach to understand, modify, redistribute, and maintain.<br></p>
         </div>
       </div>
     </div>
@@ -244,7 +213,7 @@ input[type=text] {
           </li>
         </ul>
         <div class="zb-warning"><img src="images/warning.svg" width="48" height="48" alt="" class="zb-warning-image">
-          <div class="zb-warning-text">⚠️ Zbay is in beta. Don't use it for storing funds or when security is critical.</div>
+          <div class="zb-warning-text">⚠️ Zbay is in alpha. Don't use it for storing funds or when security is critical.</div>
         </div>
       </div>
     </div>
