--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html data-wf-page="5eda64bd77a8dcf0f8ed8a11" data-wf-site="5eda64bd77a8dc6e05ed8a12">
 <head>
   <meta charset="utf-8">
-  <title>Zbay - A free, open source, peer-to-peer space for communities. No server required.</title>
+  <title>Zbay is now "Quiet"</title>
   <meta name="title" content="A free, open source, peer-to-peer space for communities. No server required.">
   <meta name="description" content="Zbay lets you send messages, build online communities, and send money privately using Zcash.">
 
@@ -78,8 +78,8 @@ input[type=text] {
   </div>
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="zb-navbar w-nav"><a href="index.html" aria-current="page" class="brand w-nav-brand w--current"><img src="images/logo-lockup--circle.svg" width="142.5" alt="" class="image-2"></a>
     <div class="spacer"></div>
-    <nav role="navigation" class="nav-menu w-nav-menu"><a href="how.html" class="zb-nav-text-link w-nav-link">How it works</a><a href="why.html" class="zb-nav-text-link w-nav-link">Why  Zbay?</a><a href="faq.html" class="zb-nav-text-link w-nav-link">FAQ</a><a href="https://twitter.com/zbayapp" class="zb-flex-nav-link w-inline-block"><img src="images/twitter--black.svg" alt="" class="zb-nav-icon"><div class="zb-nav-text">Twitter</div></a><a href="https://github.com/ZbayApp/ZbayLite" class="zb-flex-nav-link w-inline-block"><img src="images/github--black.svg" alt="" class="zb-nav-icon"><div class="zb-nav-text">Github</div></a></nav>
-    <div class="menu-button w-nav-button"><img src="images/hamburger.svg" alt="" class="image-3"></div>
+    <nav role="navigation" class="nav-menu w-nav-menu"><a href="how.html" class="zb-nav-text-link w-nav-link">How it works</a><a href="why.html" class="zb-nav-text-link w-nav-link">Why  Zbay?</a><a href="faq.html" class="zb-nav-text-link w-nav-link">FAQ</a><a href="https://twitter.com/try_quiet" class="zb-flex-nav-link w-inline-block"><img src="images/twitter--black.svg" alt="" class="zb-nav-icon"><div class="zb-nav-text">Twitter</div></a><a href="https://github.com/ZbayApp/ZbayLite" class="zb-flex-nav-link w-inline-block"><img src="images/github--black.svg" alt="" class="zb-nav-icon"><div class="zb-nav-text">Github</div></a></nav>
+    <div class="menu-button w-nav-button"></div>
   </div>
   <div class="zb-invite-section">
     <div class="zb-alert-content">
@@ -89,133 +89,21 @@ input[type=text] {
       <div class="zb-alert-subheading">Your friend may have sent you some funds to claim. After installing, come back here to <a href="#">accept your invitation</a><span></span>. </div>
     </div>
   </div>
-  <div class="zb-mobile-alert">
-    <div class="zb-alert-content">
-      <div class="zb-alert-title-section"><img src="images/ic_baseline-mobile-off.svg" alt="" class="zb-alert-icon">
-        <h1 class="zb-alert-heading">Zbay is not available on mobile yet. </h1>
-      </div>
-      <div class="zb-alert-subheading">Visit this page from a desktop to download Zbay for Mac, Windows and Linux.</div>
-    </div>
-  </div>
   <div class="zb-hero-section">
     <div class="zb-hero">
       <div class="zb-hero__desc-cont">
-        <h1 class="zb-hero-heading">A free, open source, peer-to-peer space for communities. No server required.</h1>
-        <div class="zb-form-block-cta w-form">
-          <form id="email-form" name="email-form" data-name="Email Form" class="zb-cta-form"><input type="text" class="zb-enter-your-email w-input" maxlength="256" name="name" data-name="Name" placeholder="Enter your email" id="name"><input type="submit" value="Join the beta" data-wait="Please wait..." class="submit-button w-button"></form>
-          <div class="success-message w-form-done">
-            <div class="text-block">Thank you! Your submission has been received!</div>
-          </div>
-          <div class="error-message w-form-fail">
-            <div class="text-block-2">Oops! Something went wrong while submitting the form.</div>
-          </div>
-        </div>
-        <a id="zb-autodetect-platform" href="#" class="zb-hero-button w-button">Download for Mac</a>
-        <div class="zb-platform-links">
-          <div class="zb-links-row"><a id="zb-first-other-target-link" href="#"></a> | <a id="zb-second-other-target-link" href="#"></a></div>
-        </div>
+        <h1 class="zb-hero-heading">Zbay is now &ldquo;Quiet&rdquo;</h1>
         <div class="zb-warning"><img src="images/warning.svg" width="48" height="48" alt="" class="zb-warning-image">
-          <div class="zb-warning-text">⚠️ Zbay is in alpha. Don't use it for storing funds or when security is critical.</div>
-        </div>
-      </div>
-      <div data-w-id="026f2572-7222-947b-ef55-337847e2fc0d" style="-webkit-transform:translate3d(0, 309PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(52DEG) skew(0, 0);-moz-transform:translate3d(0, 309PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(52DEG) skew(0, 0);-ms-transform:translate3d(0, 309PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(52DEG) skew(0, 0);transform:translate3d(0, 309PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(52DEG) skew(0, 0);opacity:0" class="zb-hero__image-container"><img src="images/macbook-with-screen.png" srcset="images/macbook-with-screen-p-500.png 500w, images/macbook-with-screen-p-1600.png 1600w, images/macbook-with-screen-p-2000.png 2000w, images/macbook-with-screen.png 2344w" sizes="(max-width: 479px) 90vw, (max-width: 767px) 84vw, (max-width: 991px) 76vw, 80vw" alt="" class="zbay-app-mockup"></div>
-    </div>
-  </div>
-  <div id="faq" class="zb-section">
-    <div class="zb-container">
-      <div class="zb-2-column-r-image w-row">
-        <div class="zb-l-column w-col w-col-4"><img src="images/messages.svg" alt="" class="column-image"></div>
-        <div class="zb-r-column w-col w-col-8">
-          <h1 class="zb-section-heading">Group chat, over Tor</h1>
-          <p class="zb-p">Zbay sends messages over a peer-to-peer network, using the privacy-preserving, censorship-circumvention tool <a href="https://www.torproject.org/">Tor</a> to connect to other peers.<br></p>
-          <p class="zb-p">Where apps like Slack, Discord, Signal and Element rely on central servers, Zbay syncs messages directly from other community members.<br></p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div id="faq" class="zb-section">
-    <div class="zb-container">
-      <div class="zb-2-column-l-image w-row">
-        <div class="zb-l-column w-col w-col-4"><img src="images/buying.svg" alt="" class="column-image"></div>
-        <div class="zb-r-column w-col w-col-8">
-          <h1 class="zb-section-heading">Buy, sell, send money</h1>
-          <p class="zb-p">You can buy and sell things on Zbay, privately, with <a href="https://z.cash">Zcash</a>.<br></p>
-          <p class="zb-p">With most cryptocurrencies, such as Bitcoin, third parties can see who paid who. But Zcash makes this much more difficult, if not impossible, protecting your privacy. Zbay has a Zcash wallet built in, and you can send Zcash to any Zbay user.<br></p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div id="faq" class="zb-section">
-    <div class="zb-container">
-      <div class="zb-2-column-r-image w-row">
-        <div class="zb-l-column w-col w-col-4"><img src="images/hello.svg" alt="" class="column-image"></div>
-        <div class="zb-r-column w-col w-col-8">
-          <h1 class="zb-section-heading">Be yourself, make your own rules</h1>
-          <p class="zb-p">In Zbay, not even usernames and user accounts rely on our servers. The makers of Zbay do not control who has a Zbay account, or what you do with your account.<br></p>
-          <p class="zb-p">Even if Zbay was ever forced to censor users, any developer could fork Zbay (that is, modify it and offer a competing version) to remove the censorship.<br></p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div id="faq" class="zb-section">
-    <div class="zb-container">
-      <div class="zb-2-column-l-image w-row">
-        <div class="zb-l-column w-col w-col-4"><img src="images/open-source.svg" alt="" class="column-image"></div>
-        <div class="zb-r-column w-col w-col-8">
-          <h1 data-w-id="57a5976b-66ed-76da-385d-08b82ab3d7e9" class="zb-section-heading">Don't take our word for it</h1>
-          <p class="zb-p">Zbay is free and open source software, so independent researchers will be able to verify that Zbay does what it claims.<br></p>
-          <p class="zb-p">If Zbay changes in an annoying or unethical way, any developer in the world can change Zbay’s code and publish a better version—and you could easily move your username, data, and messages to that new version.<br></p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div id="faq" class="zb-section">
-    <div class="zb-container">
-      <div class="zb-2-column-r-image w-row">
-        <div class="zb-l-column w-col w-col-4"><img src="images/giants.svg" alt="" class="column-image"></div>
-        <div class="zb-r-column w-col w-col-8">
-          <h1 class="zb-section-heading">Built to give others control</h1>
-          <p class="zb-p">Rather than building our own peer-to-peer network from scratch, we use established technologies like <a href="https://www.torproject.org/">Tor</a>, <a href="https://libp2p.io/">libp2p</a>, and <a href="https://z.cash/">Zcash</a>, since these tools are improving constantly, independent of our team.<br></p>
-          <p class="zb-p">We use familiar, cross-platform technologies like Node, Electron, and React, so that Zbay will be as easy as possible for any developers who disagree with our approach to understand, modify, redistribute, and maintain.<br></p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="zb-hero-section">
-    <div class="zb-hero">
-      <div class="zb-hero__desc-cont">
-        <h1 class="zb-hero-heading">It's cool. Try it.</h1>
-        <div class="zb-form-block-cta w-form">
-          <form id="email-form" name="email-form" data-name="Email Form" class="zb-cta-form"><input type="text" class="zb-enter-your-email w-input" maxlength="256" name="name-2" data-name="Name 2" placeholder="Enter your email" id="name-2"><input type="submit" value="Join the beta" data-wait="Please wait..." class="submit-button w-button"></form>
-          <div class="success-message w-form-done">
-            <div class="text-block">Thank you! Your submission has been received!</div>
+          <div class="zb-warning-text">We're building a Tor-based alternative to Slack & Discord that doesn't use servers. Interested?
           </div>
-          <div class="error-message w-form-fail">
-            <div class="text-block-2">Oops! Something went wrong while submitting the form.</div>
-          </div>
-        </div>
-        <a id="zb-autodetect-platform-bottom" href="#" class="zb-hero-button w-button">Download for Mac</a>
+        </div>        
+        <a href="https://tryquiet.org" class="zb-hero-button w-button">Try Quiet >></a>
         <div class="zb-platform-links">
-          <div class="zb-links-row"><a id="zb-first-other-target-link-bottom" href="#"></a> | <a id="zb-second-other-target-link-bottom" href="#"></a></div>
-        </div>
-        <ul role="list" class="zb-hero__sec-links-list">
-          <li class="zb-hero__sec-link-item">
-            <div class="zb-hero__sec-link-desc">Windows? <a href="#" class="zb-hero__sec-link">Download Zbay for Windows</a></div>
-          </li>
-          <li class="zb-hero__sec-link-item">
-            <div class="zb-hero__sec-link-desc">Linux? <a href="#" class="zb-hero__sec-link">Download Zbay for Linux</a></div>
-          </li>
-          <li class="zb-hero__sec-link-item">
-            <div class="zb-hero__sec-link-desc">Curious why we made it? <a href="#" class="zb-hero__sec-link">Read our essay</a></div>
-          </li>
-          <li class="zb-hero__sec-link-item">
-            <div class="zb-hero__sec-link-desc"><em>How</em> private and anonymous? <a href="#" class="zb-hero__sec-link">Learn about Zcash</a></div>
-          </li>
-        </ul>
-        <div class="zb-warning"><img src="images/warning.svg" width="48" height="48" alt="" class="zb-warning-image">
-          <div class="zb-warning-text">⚠️ Zbay is in alpha. Don't use it for storing funds or when security is critical.</div>
+          <br>
+          <br>
         </div>
       </div>
+      <div data-w-id="026f2572-7222-947b-ef55-337847e2fc0d" style="opacity:0.2" class="zb-hero__image-container"><img src="images/macbook-with-screen.png" srcset="images/macbook-with-screen-p-500.png 500w, images/macbook-with-screen-p-1600.png 1600w, images/macbook-with-screen-p-2000.png 2000w, images/macbook-with-screen.png 2344w" sizes="(max-width: 479px) 90vw, (max-width: 767px) 84vw, (max-width: 991px) 76vw, 80vw" alt="" class="zbay-app-mockup"></div>
     </div>
   </div>
   <div class="zb-footer">
@@ -234,14 +122,11 @@ input[type=text] {
       </li>
     </ul>
     <ul role="list" class="zb-footer__sec-btns-list">
-      <li class="zb-footer__sec-btn-item"><a href="https://twitter.com/zbayapp" class="zb-footer__sec-btn w-inline-block"><img src="images/twitter--white.svg" alt="" class="zb-footer__sec-btn-image"></a></li>
+      <li class="zb-footer__sec-btn-item"><a href="https://twitter.com/try_quiet" class="zb-footer__sec-btn w-inline-block"><img src="images/twitter--white.svg" alt="" class="zb-footer__sec-btn-image"></a></li>
       <li class="zb-footer__sec-btn-item"><a href="https://github.com/ZbayApp/ZbayLite" class="zb-footer__sec-btn w-inline-block"><img src="images/github--white.svg" alt="" class="zb-footer__sec-btn-image"></a></li>
     </ul>
     <div class="zb-footer__copyright-text"><span class="copy-left">©</span> Copyleft Zbay 2020</div>
   </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js?site=5eda64bd77a8dc6e05ed8a12" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-  <script src="js/webflow.js" type="text/javascript"></script>
-  <script src="js/browserDetectionScript.js" type="text/javascript"></script>
-  <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
+  <script src="js/webflow.js" type="text/javascript"></script>  
 </body>
 </html>
