--- a/how.html
+++ b/how.html
@@ -37,11 +37,15 @@ html {
 <body>
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="zb-navbar w-nav"><a href="index.html" class="brand w-nav-brand"><img src="images/logo-lockup--circle.svg" width="142.5" alt="" class="image-2"></a>
     <div class="spacer"></div>
-    <nav role="navigation" class="nav-menu w-nav-menu"><a href="how.html" aria-current="page" class="zb-nav-text-link w-nav-link w--current">How it works</a><a href="why.html" class="zb-nav-text-link w-nav-link">Why  Zbay?</a><a href="faq.html" class="zb-nav-text-link w-nav-link">FAQ</a><a href="https://twitter.com/zbayapp" class="zb-flex-nav-link w-inline-block"><img src="images/twitter--black.svg" alt="" class="zb-nav-icon"><div class="zb-nav-text">Twitter</div></a><a href="https://github.com/ZbayApp/ZbayLite" class="zb-flex-nav-link w-inline-block"><img src="images/github--black.svg" alt="" class="zb-nav-icon"><div class="zb-nav-text">Github</div></a></nav>
-    <div class="menu-button w-nav-button"><img src="images/hamburger.svg" alt="" class="image-3"></div>
+    <nav role="navigation" class="nav-menu w-nav-menu"><a href="how.html" aria-current="page" class="zb-nav-text-link w-nav-link w--current">How it works</a><a href="why.html" class="zb-nav-text-link w-nav-link">Why  Zbay?</a><a href="faq.html" class="zb-nav-text-link w-nav-link">FAQ</a><a href="https://twitter.com/try_quiet" class="zb-flex-nav-link w-inline-block"><img src="images/twitter--black.svg" alt="" class="zb-nav-icon"><div class="zb-nav-text">Twitter</div></a><a href="https://github.com/ZbayApp/ZbayLite" class="zb-flex-nav-link w-inline-block"><img src="images/github--black.svg" alt="" class="zb-nav-icon"><div class="zb-nav-text">Github</div></a></nav>
+    <div class="menu-button w-nav-button"></div>
   </div>
   <div id="how" class="zb-how-section">
     <div class="zb-section-container">
+      <p>
+        ⚠️ Zbay is no longer maintained. We are now building <a href="https://tryquiet.org">Quiet</a>, a Tor-based alternative to Slack & Discord that doesn't rely on servers. 
+      </p>
+      <br>
       <h2
         data-w-id="2bf1c4bc-d4f2-8c4a-1195-281e50e43eba"
         class="zb-section-heading"
@@ -138,7 +142,7 @@ html {
       </li>
     </ul>
     <ul role="list" class="zb-footer__sec-btns-list">
-      <li class="zb-footer__sec-btn-item"><a href="https://twitter.com/zbayapp" class="zb-footer__sec-btn w-inline-block"><img src="images/twitter--white.svg" alt="" class="zb-footer__sec-btn-image"></a></li>
+      <li class="zb-footer__sec-btn-item"><a href="https://twitter.com/try_quiet" class="zb-footer__sec-btn w-inline-block"><img src="images/twitter--white.svg" alt="" class="zb-footer__sec-btn-image"></a></li>
       <li class="zb-footer__sec-btn-item"><a href="https://github.com/ZbayApp/ZbayLite" class="zb-footer__sec-btn w-inline-block"><img src="images/github--white.svg" alt="" class="zb-footer__sec-btn-image"></a></li>
     </ul>
     <div class="zb-footer__copyright-text"><span class="copy-left">©</span> Copyleft Zbay 2020</div>
